--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -14,10 +14,12 @@
             <img src="../assets/logo-login.png" alt="Logo da empresa Acme"  height=26% class="logo">
         </div>
         <h1>LOGIN</h1>
-        <input type="number" class="input-id" placeholder="ID"/>
-        <input type="password" class="input-senha" minlength="6" maxlength="12" placeholder="SENHA"/>
-        <button class="button-logar"><h2>LOGAR</h2></button>
+        <input id="code" type="number" class="input-id" placeholder="ID"/>
+        <input id="pass" type="password" class="input-senha" minlength="6" maxlength="12" placeholder="SENHA"/>
+        <button onclick="checkLogin()" class="button-logar"><h2>LOGAR</h2></button>
     </div>
 </div>
+
+<script src="../backend/login.js" ></script>
 </body>
 </html>
