Página de adm e ajustes finais

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ACME</title>
+    <link rel="shortcut icon" href="./assets/logo-icone.png" />
     <link href="./styles/index.css" rel="stylesheet" />
     <link href="./styles/global.css" rel="stylesheet" />
   </head>
@@ -183,7 +184,7 @@
           </div>
         </div>
       </div>
-      <button onclick="toLogin()"><span class="adm"> Login </span></button>
+      <a href="pages/login.html"><span class="adm"> Login </span></a>
     </footer>
   </body>
 
