--- a/src/pages/edit.html
+++ b/src/pages/edit.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador- Editar item</title>
-    <link href="../styles/add.css" rel="stylesheet">
+    <title>Administrador - Editar item</title>
+    <link rel="shortcut icon" href="../assets/logo-icone.png" />
     <link href="../styles/global.css" rel="stylesheet">
+    <link href="../styles/add.css" rel="stylesheet">
 </head>
 <body>
     <div class="fundo">
         <div class="container">
             <div class="barra-titulo">
-                <button class="botao-voltar"><img src="../assets/seta-button.png"><span>VOLTAR</span></button>
+                <a href="./adm.html" class="botao-voltar"><img src="../assets/seta-button.png"><span>VOLTAR</span></a>
                 <h1>EDITAR PRODUTO</h1>
             </div>
-            <div class="imagem">
-                <img src="../assets/imagem-produto.png" id="imagem-produto">
-            </div>
-            <div class="inputs">
-                <input id="nome-produto" type="text" placeholder="Nome do produto"/>
-                <input id="descricao-produto" type="text" placeholder="Descrição do produto"/>
-                <input id="valor-produto" type="number" placeholder="Valor R$00,00">
-                <button class="adicionar">ADICIONAR</button>
+            <div class="body">
+              <div class="imagem">
+                  <img src="../assets/imagem-produto.png" id="imagem-produto">
+              </div>
+              <div class="inputs">
+                  <input id="nome-produto" type="text" placeholder="Nome do produto"/>
+                  <textarea id="descricao-produto" type="text" placeholder="Descrição do produto"></textarea>
+                  <input id="valor-produto" type="number" placeholder="Valor R$00,00">
+              </div>
+              <button class="adicionar">ADICIONAR</button>
             </div>
         </div>
     </div>
