--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="shortcut icon" href="../assets/logo-icone.png" />
     <link href="../styles/login.css" rel="stylesheet">
     <link href="../styles/global.css" rel="stylesheet">
 </head>
